--- a/styles.css
+++ b/styles.css
@@ -15,7 +15,7 @@ section {
 h1 {
     margin: 0 auto;
     text-align: center;
-    font-family: 'Alkatra', cursive;
+    font-family: 'Kalam', cursive;
     font-size: 2rem;
     color: #1a1a1a;
 }
@@ -37,8 +37,8 @@ h1 {
     display: flex;
     align-items: center;
     justify-content: center;
-    font-family: 'Alkatra', cursive;
-    font-size: 1.6rem;
+    font-family: 'Kalam', cursive;
+    font-size: 1.8rem;
     text-align: center;
 }
 
@@ -51,7 +51,7 @@ h1 {
     border-radius: 5px;
     font-size: 1rem;
     padding: 8px 7px;
-    background-color: #C26B6F;
+    background-color: #E14142;
     font-family: 'Roboto', sans-serif;
     font-weight: 500;
 }
@@ -69,7 +69,7 @@ h1 {
         width: 150px;
         height: 200px;
         margin: 10px 5px;
-        font-size: 1.2rem;
+        font-size: 1.4rem;
         
     }
 }
