--- a/styles.css
+++ b/styles.css
@@ -42,6 +42,22 @@ h1 {
     text-align: center;
 }
 
+.card-img {
+    width: 200px;
+    height: 250px;
+    margin: 22px;
+    background-color: #eef3fb;
+    box-shadow: 1px 1px 10px 5px rgba(64, 64, 64, 0.5);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+img {
+    width: 100%;
+    height: 100%;
+}
+
 #restart {
     display: flex;
     margin: 40px auto 0 auto;
@@ -72,6 +88,15 @@ h1 {
         font-size: 1.4rem;
         
     }
+
+    .card-img {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 150px;
+        height: 200px;
+        margin: 10px 5px;        
+    }
 }
 
 @media (max-width: 800px) {
@@ -82,7 +107,13 @@ h1 {
 
     .card {
         width: 150px;
-        height: 200px;
+        height: 180px;
+        margin: 10px 5px;
+    }
+
+    .card-img {
+        width: 150px;
+        height: 180px;
         margin: 10px 5px;
     }
 
@@ -94,14 +125,25 @@ h1 {
 @media (max-width: 499px) {
     .card {
         width: 125px;
-        height: 175px;
+        height: 160px;
+        margin: 10px 5px;
+    }
+
+    .card-img {
+        width: 125px;
+        height: 160px;
         margin: 10px 5px;
     }
 }
 
 @media (max-width: 404px) {
     .card {
-        width: 100px;
-        height: 150px;
+        width: 110px;
+        height: 140px;
+    }
+
+    .card-img {
+        width: 110px;
+        height: 140px;
     }
 }
